# anyfold

./: CMakeLists.txt  FindOpenCL.cmake
convolutionFFT2D/: Makefile  convolutionFFT2D  convolutionFFT2D.cu  convolutionFFT2D.cuh  main.cpp
tests/: CMakeLists.txt  test_cuda_multiple_convolutions.cpp  test_cuda_multiple_ffts.cpp
